# deployer

./: CHANGELOG.md  README.md  deployer.code-workspace  justfile  project.cfg  pyproject.toml  pytest.ini  requirements.txt  todo.txt
cc/: README.md  __init__.py
deployer/: __init__.py  main.py  sdk.py
deployer/runargs/: __init__.py
deployer/sdk/: __init__.py
docs/: sdk.md
dome/core/: model.py
dome/project/: __init__.py
dome/runargs/: __init__.py
dome/sdk/: __init__.py
installer/: __init__.py  main.py
installer/core/: __init__.py
installer/project/: __init__.py
installer/runargs/: __init__.py
installer/sdk/: __init__.py  _host.py  _recycle.py
tests/: test_cli_execute.py  test_deployer_cli.py  test_installer_cli.py  test_sdk_recycle.py
