[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "installer"
version = "1.2.0"
dependencies = [
  "pydantic",
  "colorama",
  "aiofiles",
  "httpx",
  "python-dotenv",
  "pytest",
]

[project.scripts]
installer = "installer.main:main"

[tool.setuptools]
packages = {find = {}}
